<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="kr.donghyun.flowable.testing.viewmodel.SearchResultViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstPhaseGround"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".view.PhaseFirstFragment">


        <androidx.cardview.widget.CardView
            android:id="@+id/resultCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                app:cardCornerRadius="10dp">

                                <ImageView
                                    android:id="@+id/profileImage"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    tools:srcCompat="@tools:sample/avatars" />
                            </androidx.cardview.widget.CardView>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:gravity="left|center_vertical"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/userNameTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/spiecial_font"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/levelText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="12sp" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/spiecial_font"
            android:text="@string/result_"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/resultCardView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/result"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/actionNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next_"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>