<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="kr.donghyun.flowable.testing.viewmodel.MainViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".view.MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inputBattleTag"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:imeOptions="actionSearch"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.searchBattleTag}" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/spiecial_font"
            android:text="@string/search_your_profile"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/for_now"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/resultCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regionButton">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                app:cardCornerRadius="10dp">

                                <ImageView
                                    android:id="@+id/profileImage"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    tools:srcCompat="@tools:sample/avatars" />
                            </androidx.cardview.widget.CardView>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:gravity="left|center_vertical"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/userNameTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/spiecial_font"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/levelText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="12sp" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/userName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/average_score" />

                            <ImageView
                                android:id="@+id/tierImage"
                                android:layout_width="25dp"
                                android:layout_height="25dp" />

                            <TextView
                                android:id="@+id/afterText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/average_score_after" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            app:adapter="@{viewModel.competitiveRoleAdapter}"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                    </LinearLayout>
                </LinearLayout>

            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/regionButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <TextView
                android:id="@+id/regionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>